--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ regex = "^1.5"
 serde = { version = "^1.0", features = ["derive"] }
 termcolor = "^1.1"
 walkdir = "^2.3"
+rand = "0.8.5"
 
 tree-sitter = ">= 0.19, < 0.21"
 tree-sitter-java = "=0.19.0"
